--- a/ui.html
+++ b/ui.html
@@ -1209,6 +1209,7 @@ Results:
         <tr><td><code>[haircolor]</code></td><td>blonde, brunette, red, black, pink, etc.</td></tr>
         <tr><td><code>[hairstyle-color]</code></td><td>combines both: with long wavy blonde hair, with a red ponytail</td></tr>
         <tr><td><code>[bodytype]</code></td><td>petite body, slender figure, athletic build, hourglass figure, etc.</td></tr>
+        <tr><td><code>[accessory]</code></td><td>glasses, hat, choker, tattoo, earrings, gloves, etc.</td></tr>
       </table>
 
       <h4>Number Ranges <code>[N-M]</code></h4>
@@ -2815,6 +2816,9 @@ with open("image.png", "wb") as f:
       ],
       bodytype: [
         'petite body', 'slender figure', 'athletic build', 'curvy figure', 'voluptuous body', 'muscular physique', 'toned body', 'lithe frame', 'willowy figure', 'buxom figure', 'hourglass figure', 'lean build', 'fit body', 'narrow waist', 'thick thighs', 'wide hips', 'slim waist'
+      ],
+      accessory: [
+        'glasses', 'sunglasses', 'hat', 'cap', 'beanie', 'headband', 'tiara', 'crown', 'earrings', 'hoop earrings', 'necklace', 'choker', 'pendant', 'collar', 'dog collar', 'bracelet', 'watch', 'rings', 'belt', 'scarf', 'bow', 'ribbon', 'tattoo', 'sleeve tattoo', 'piercings', 'nose ring', 'lip ring', 'gloves', 'fingerless gloves', 'mask', 'blindfold', 'gag', 'leash', 'cuffs', 'anklet', 'humiliating tattoo', 'slave brand', 'nipple clamps', 'collar and leash', 'spiked collar', 'bondage ropes', 'shackles', 'manacles', 'chains', 'dirt', 'bowine patterns', 'fishnet stockings', 'lace gloves', 'lace stockings', 'garter belt', 'corset', 'fetish harness', 'latex outfit', 'leather outfit', 'PVC outfit', 'bondage gear', 'fetish mask', 'eye patch', 'corset', 'fetish heels', 'thigh high boots', 'platform boots', 'stiletto heels', 'collared leash',  'cat ears', 'dog ears', 'rabbit ears', 'cow ears', 'cow bell', 'playboy bunny outfit', 'maid headband', 'nurse hat', 'schoolgirl bow', 'police hat', 'military cap', 'sailor hat', 'witch hat', 'maid headpiece', 'skimpy outfit', 'sexy costume', 'lacy lingerie', 'bikini', 'swimsuit', 'corset and garter belt', 'fishnet bodysuit', 'latex catsuit', 'leather harness', 'bondage outfit', 'fetish wear', 'dominatrix attire', 'submissive outfit', 'slave outfit', 'sexy uniform', 'roleplay costume', 'naughty outfit', 'erotic lacy lingerie', 'transparent clothing', 'see-through outfit', 'barely-there outfit', 'micro bikini', 'pasties', 'crotchless panties', 'open-cup bra', 'bondage hood', 'full-body harness', 'restraint system', 'nipple pasties', 'anal hook', 'spreaders', 'chastity device', 'shock collar', 'tattoo with word \'SLUT\'', 'tattoo with word \'WHORE\'', 'tattoo with word \'SLAVE\'', 'tattoo with word \'PROPERTY\'', 'branding mark', 'slave ankle bracelet'
       ]
     };
 
