--- a/ui.html
+++ b/ui.html
@@ -223,13 +223,14 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background: linear-gradient(transparent, rgba(0,0,0,0.85));
+      background: rgba(0,0,0,0.3);
       color: white;
-      padding: 30px 12px 12px;
+      padding: 12px;
       font-size: 0.8rem;
       line-height: 1.4;
       max-height: 30%;
       overflow-y: auto;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.9);
     }
     .preview-prompt::-webkit-scrollbar { width: 4px; }
     .preview-prompt::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.3); border-radius: 2px; }
@@ -246,10 +247,9 @@
       font-weight: 600;
     }
     .preview-prompt .var-highlight {
-      background: rgba(255, 200, 50, 0.4);
-      border-radius: 3px;
-      padding: 1px 3px;
-      box-shadow: 0 0 4px rgba(255, 200, 50, 0.5);
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 2px;
+      padding: 0 3px;
     }
 
     /* Variable selector modal */
